[package]
name = "clyp"
version = "0.1.0"
authors = ["Gabriel Barker <gabrielbarker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clipboard = "0.5.0"
structopt = "0.3.13"

[dev-dependencies]
tempfile = "3.1.0"